# Lyra-SDR-cpp

./: .gitattributes  .gitignore  CMakeLists.txt  CREDITS.md  KNOWN_ISSUES.md  LICENSE  NOTICE.md  README.md
.claude/: settings.json
data/: dxcc_prefix.csv
docs/: CROSS_PLATFORM.md  CW_DECODER_REVIEW.md  EXECUTION_PLAN.docx  EXECUTION_PLAN.md  FEATURES.md  PENDING_TASKS.md  REMAINING_WORK.md  RESUME_FT8_TCI_DEBUG.md  RULES.md  SESSION_LOG.docx  SESSION_LOG.md  THETIS_DIRECT_PORT_PLAN.docx  THETIS_DIRECT_PORT_PLAN.md  THETIS_VS_LYRA_DEVIATIONS.md  THETIS_VS_LYRA_DEVIATIONS_FRESH.md  THETIS_VS_LYRA_RECONCILED.md  THETIS_VS_LYRA_TCI_TX_END_TO_END.md  TX_ARCHITECTURAL_MAPPING.md
docs/architecture/: AUDIO_IO_AND_PROFILES_PLAN.md  IVAC_PORT_PLAN.md  P4_WIRE_LIVE_DESIGN.md  PARITY_CHECKPOINTS.md  PROFILE_MODEL_STAGE0_DESIGN.md  RECORDER_DESIGN.md  STAGE_7_TX_WIRE_DESIGN.md  STAGE_E_TXCHANNEL_AUDIT.md  STEP14_PLAN.md  STEP14_STAGE2B_DESIGN.md  com_port_design.md  combinator_design.md  combo_link_design.md  ctune_design.md  cw3_software_keyer_design.md  cw5_decoder_design.md  cw_tx_design.md  dsp_options_design.md  external_cw_keyer_design.md  fm_tx_correctness_design.md  fm_tx_design.md  freq_calibration_design.md  multi_rig_design.md  oc_control_design.md  p2_rx_design.md  plate_design.md  rx2_layout_design.md  rx_eq_design.md  rx_gain_divergence_audit.md  spots_design.md  tx1_ssb_design.md  tx_0c_design.md  tx_audio_path_reference.md  tx_power_model_design.md  tx_protection_design.md  tx_research.md  vac2_design.md  voice_keyer_design.md  wf_id_design.md
docs/help/: GETTING_STARTED.md  USER_GUIDE.md
docs/refs/: README.md  cm_thread_mechanism.md  mox_fsm_and_wire_frame.md  tci_tx_audio_path.md  txa_chain.md  wire_threads_and_mic_producer.md
docs/releases/: v0.10.0.md  v0.11.0.md  v0.11.5.md  v0.12.0.md  v0.12.1.md  v0.12.2.md  v0.12.3.md  v0.2.4.md  v0.2.5.md  v0.3.0.md  v0.4.0.md  v0.4.10.md  v0.4.11.md  v0.4.3.md  v0.4.4.md  v0.4.5.md  v0.4.6.md  v0.4.8.md  v0.4.9.md  v0.5.0.md  v0.6.0.md  v0.7.0.md  v0.8.0.md  v0.9.0.md
docs/wiki/: FAQ-and-Troubleshooting.md  Feature-Status.md  First-Voice-Setup.md  Home.md  Installing-and-first-connection.md  PC-Requirements.md  Quick-Start.md  README.md  Roadmap.md  SDRLogger-Plus-Combo.md  Supported-Radios.md  _Footer.md  _Sidebar.md
installer/: lyra.iss
scratch/: _typedef_fidelity_test.cpp  test_capturedprofile.cpp  test_clip_bank.cpp  test_clip_player.cpp  test_clip_recorder.cpp  test_combinator.cpp  test_cw_decoder.cpp  test_ilv.cpp  test_iqstft.cpp  test_ivac.cpp  test_ivac_audio.cpp  test_mox_edge_fade.cpp  test_noisereducer.cpp  test_oc_control.cpp  test_parameq.cpp  test_plate.cpp  test_portaudio.cpp  test_profile.cpp  test_profile_rack.cpp  test_recorder.cpp  test_speech.cpp  test_tx_iq_handshake.cpp  test_tx_iq_ring.cpp  test_vox_detector.cpp  test_wav_io.cpp  test_xcmaster.cpp  test_zerobeat.cpp
src/: CwMacroModel.cpp  CwMacroModel.h  WaterfallIdController.cpp  WaterfallIdController.h  autoscale.h  backup.cpp  backup.h  bandmemory.cpp  bandmemory.h  bandplan.cpp  bandplan.h  bands.cpp  bands.h  capturedprofile.cpp  capturedprofile.h  combinatormodel.cpp  combinatormodel.h  default_layout.h  dockdragcontroller.cpp  dockdragcontroller.h  dxcc.cpp  dxcc.h  dxcluster_feeder.cpp  dxcluster_feeder.h  eibistore.cpp  eibistore.h  eqmodel.cpp  eqmodel.h  freqdisplay.cpp  freqdisplay.h  genslots.cpp  genslots.h  grid.cpp  grid.h  help.cpp  help.h  helpdialog.cpp  helpdialog.h  hl2_discovery.cpp  hl2_discovery.h  (+85 more)
src/cat/: CatServer.cpp  CatServer.h  SerialCwKey.cpp  SerialCwKey.h  SerialPtt.cpp  SerialPtt.h
src/dsp/: Combinator.cpp  Combinator.h  CwDecoder.cpp  CwDecoder.h  EqAnalyzer.cpp  EqAnalyzer.h  FreqCalMeasure.cpp  FreqCalMeasure.h  MonitorRing.h  ParamEq.cpp  ParamEq.h  Plate.cpp  Plate.h  SpeechProcessor.cpp  SpeechProcessor.h  StreamRegistry.cpp  StreamRegistry.h  StreamRing.h  StreamThread.cpp  StreamThread.h  TxIqRing.cpp  TxIqRing.h  WaterfallId.cpp  WaterfallId.h  ZeroBeat.cpp  ZeroBeat.h
src/oc/: OcControl.cpp  OcControl.h
src/profile/: CompanionLauncher.cpp  CompanionLauncher.h  Profile.cpp  Profile.h  ProfileBindings.h  ProfileManager.cpp  ProfileManager.h  ProfileStore.cpp  ProfileStore.h
src/ps/: CalcCffi.h  IqcCffi.h  IqcLifecycle.cpp  IqcLifecycle.h  PsCalcThread.cpp  PsCalcThread.h  PsFsm.cpp  PsFsm.h
src/qml/: AudioPanel.qml  BandPanel.qml  CalibrationPanel.qml  CombinatorPanel.qml  CwConsolePanel.qml  CwDecoderPanel.qml  DisplayPanel.qml  EqPanel.qml  HorizonArc.qml  LyraComboBox.qml  LyraSlider.qml  LyraSpinBox.qml  MeterPanel.qml  ModeFilterPanel.qml  PanadapterPanel.qml  PlasmaBar.qml  PlatePanel.qml  ProfilePanel.qml  RecorderPanel.qml  RxEqPanel.qml  SpeechPanel.qml  TrashCan.qml  TunerPanel.qml  TuningPanel.qml  TxPanel.qml  VerticalLadder.qml  VoiceKeyerPanel.qml
src/recorder/: RecorderEngine.cpp  RecorderEngine.h  SessionConverter.cpp  SessionConverter.h  WavStreamWriter.cpp  WavStreamWriter.h
src/rig/: RadioCapabilities.cpp  RadioCapabilities.h  RigRegistry.cpp  RigRegistry.h  RigScope.cpp  RigScope.h
src/shaders/: glow.frag  watermark.frag
src/tci/: TciListener.cpp  TciListener.h  TciTxBridge.cpp  TciTxBridge.h  TciTxStereoMode.h  TciTxSupervisorThread.cpp  TciTxSupervisorThread.h
src/tx/: AttOnTxPolicy.cpp  AttOnTxPolicy.h  ClipBank.cpp  ClipBank.h  ClipRecorder.cpp  ClipRecorder.h  ClipRecorderPlayer.cpp  ClipRecorderPlayer.h  CwKeyer.cpp  CwKeyer.h  CwMorse.cpp  CwMorse.h  KeydownSequence.cpp  KeydownSequence.h  KeyupSequence.cpp  KeyupSequence.h  MoxEdgeFade.cpp  MoxEdgeFade.h  PttFsm.cpp  PttFsm.h  TrSequencing.h  VoiceKeyer.cpp  VoiceKeyer.h  VoxDetector.cpp  VoxDetector.h  WavIo.cpp  WavIo.h
src/wdsp/: AAMix.cpp  AAMix.h  ChannelLifecycle.h  ILV.cpp  ILV.h  Resample.h  TxChannel.cpp  TxChannel.h  TxaCffi.h
src/wire/: AAMix.cpp  AAMix.h  CMaster.cpp  CMaster.h  CmBuffs.cpp  CmBuffs.h  DdcMap.cpp  DdcMap.h  DispatchState.h  Ep2SendThread.cpp  Ep2SendThread.h  Ep6RecvThread.cpp  Ep6RecvThread.h  ForceCandC.h  (+35 more)
tools/: build_getting_started_pdf.py  sync_execution_plan.py
(+12 files in other folders)
